--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "mock-server-fitmes",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "mock-server-rest.js",
+  "scripts": {
+    "start": "node mock-server-rest.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0"
